--- a/wp-content/themes/marchebe/templates/category/_child_item.html.twig
+++ b/wp-content/themes/marchebe/templates/category/_child_item.html.twig
@@ -4,7 +4,7 @@
        href="{{ item.url }}"
        @click.prevent="selectCategory({{ item.term_id }},'{{ (name ?? item.slug)|escape }}')"
        :aria-current="isSelected({{ item.term_id }}) ? 'page' : null">
-        <span class="mr-2 font-medium">{{ name ?? item.name }}</span>
+        <h2 class="mr-2 font-medium text-inherit">{{ name ?? item.name }}</h2>
         <svg class="w-5 h-5 flex-shrink-0"
              xmlns="http://www.w3.org/2000/svg"
              fill="none"
