--- a/wp-content/themes/marchebe/assets/css/marchebe.css
+++ b/wp-content/themes/marchebe/assets/css/marchebe.css
@@ -1629,6 +1629,9 @@
   .py-16 {
     padding-block: calc(var(--spacing) * 16);
   }
+  .pt-2 {
+    padding-top: calc(var(--spacing) * 2);
+  }
   .pt-6 {
     padding-top: calc(var(--spacing) * 6);
   }
@@ -1747,9 +1750,6 @@
   .text-administration {
     color: var(--color-administration);
   }
-  .text-black {
-    color: var(--color-black);
-  }
   .text-black-base {
     color: var(--color-black-base);
   }
@@ -1797,6 +1797,9 @@
   }
   .text-green-600 {
     color: var(--color-green-600);
+  }
+  .text-inherit {
+    color: inherit;
   }
   .text-red-500 {
     color: var(--color-red-500);
@@ -2780,6 +2783,12 @@
       padding-block: calc(var(--spacing) * 4);
     }
   }
+  .lg\:text-2xl {
+    @media (width >= 64rem) {
+      font-size: var(--text-2xl);
+      line-height: var(--tw-leading, var(--text-2xl--line-height));
+    }
+  }
   .lg\:text-4xl {
     @media (width >= 64rem) {
       font-size: var(--text-4xl);
@@ -2862,14 +2871,14 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-#homepage a, #main-header a, #desktop-menu a, #mobile-menu a, #shortcuts a, #widgets a {
+#homepage a, #main-header a, #desktop-menu a, #mobile-menu a, #shortcuts a, #widgets a, #category-filter-menu a {
   text-decoration: none;
 }
 img, video, iframe {
   max-width: 100%;
   object-fit: cover;
 }
-article h2, article h3 {
+article h2:not(:has(a)), article h3 {
   color: var(--color-cta-light);
 }
 #app {
