--- a/wp-content/themes/marchebe/templates/homepage.html.twig
+++ b/wp-content/themes/marchebe/templates/homepage.html.twig
@@ -7,6 +7,7 @@
             {% include '@AcMarche/homepage/_agenda.html.twig' %}
         </div>
     </section>
+    {% include '@AcMarche/widgets/_cookies.html.twig' %}
     {% include '@AcMarche/homepage/_widgets.html.twig' %}
     {% include '@AcMarche/homepage/_partners.html.twig' %}
 </main>
