--- a/wp-content/themes/marchebe/templates/homepage/_form_search.html.twig
+++ b/wp-content/themes/marchebe/templates/homepage/_form_search.html.twig
@@ -19,7 +19,7 @@
       <!-- Submit Button -->
       <button
           type="submit"
-          class="absolute inset-y-0 right-0 flex items-center px-4 md:px-6 bg-cta-brown text-white font-semibold rounded-r-full hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500 transition-colors"
+          class="cursor-pointer absolute inset-y-0 right-0 flex items-center px-4 md:px-6 bg-cta-brown text-white font-semibold rounded-r-full hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500 transition-colors"
           aria-label="Rechercher"
       >
         <!-- Mobile: Icon only -->
