--- a/wp-content/themes/marchebe/templates/widgets/_cookies.html.twig
+++ b/wp-content/themes/marchebe/templates/widgets/_cookies.html.twig
@@ -61,7 +61,7 @@
                 <h4 class="font-bold text-gray-900 text-lg">Cookie Notice</h4>
                 <p class="mt-2 text-gray-700 leading-relaxed">
                     Ce site utilise des cookies pour vous fournir une expérience optimale.
-                    <a href="/administration/rgpd" class="text-citoyen hover:underline font-medium">
+                    <a href="/administration/rgpd" class="text-citoyen hover:underline">
                         Mentions légales et RGPD
                     </a>
                 </p>
