--- a/wp-content/themes/marchebe/templates/category/show.html.twig
+++ b/wp-content/themes/marchebe/templates/category/show.html.twig
@@ -28,7 +28,7 @@
     this.loading = true;
 
     const formData = new FormData();
-    formData.append('action', 'my_ajax_action');
+    formData.append('action', 'set_category_action');
     formData.append('nonce', wpData.nonce);
     formData.append('categorySelected', this.categorySelected);
     formData.append('currentSite', this.currentSite);
