--- a/wp-content/themes/marchebe/templates/widgets/_analytics.html.twig
+++ b/wp-content/themes/marchebe/templates/widgets/_analytics.html.twig
@@ -2,7 +2,7 @@
 <script>
     // Check if user has consented to statistics cookies
     (function () {
-        {% if not cookieIsAuthorizedByName('statistics') %}
+        {% if cookieIsAuthorizedByName('statistics') %}
             // Load Google Analytics script
             const script = document.createElement('script');
             script.async = true;
