--- a/wp-content/themes/marchebe/templates/search.html.twig
+++ b/wp-content/themes/marchebe/templates/search.html.twig
@@ -14,7 +14,7 @@
                     <!-- Search Input -->
                     <input v-model="searchQuery"
                            id="hero-search"
-                           name="q"
+                           name="s"
                            type="search"
                            placeholder="Que recherchez-vous ?"
                            class="w-full py-3 pl-12 pr-16 md:pr-32 text-gray-900 bg-white rounded-full shadow-md focus:outline-none focus:ring-2 focus:ring-blue-400 focus:ring-opacity-75 transition-shadow"
@@ -36,30 +36,7 @@
             {% if hits|length > 0 %}
                 <ul class="divide-y divide-gray-200">
                     {% for result in hits %}
-                        <li class="py-4 flex items-center justify-between">
-                            <a href="{{ result.link }}"
-                               class="group block w-full">
-                                <p class="font-semibold text-cta-dark group-hover:text-citoyen transition-colors">
-                                    {{ result.name }}
-                                </p>
-                                <div class="flex flex-row gap-2">
-                                     <span class="text-sm text-gray-500">
-                                       {% if result.site|length > 0 %}
-                                           {{ result.site.name }}
-                                       {% endif %}
-                                    </span>
-                                    {% for path in result.paths %}
-                                        <span class="text-sm text-gray-500">
-                                            > {{ path.name }}
-                                        </span>
-                                    {% endfor %}
-                                </div>
-                            </a>
-                            <svg class="h-5 w-5 text-gray-400 group-hover:text-blue-600 transition-colors" fill="none"
-                                 viewBox="0 0 24 24" stroke="currentColor">
-                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5l7 7-7 7"/>
-                            </svg>
-                        </li>
+                        {% include '@AcMarche/search/_inline_document.html.twig' %}
                     {% endfor %}
                 </ul>
             {% else %}
