--- a/wp-content/themes/marchebe/templates/category/_posts.html.twig
+++ b/wp-content/themes/marchebe/templates/category/_posts.html.twig
@@ -14,7 +14,7 @@
             <template x-for="post in filteredPosts" :key="post.id">
                 <article
                         class="group bg-white p-2 rounded-xl shadow-sm hover:shadow-xl hover:-translate-y-2 transition-all duration-300 ease-in-out animated-element">
-                    <h2 class="text-lg md:text-lg font-bold">
+                    <h2 class="text-lg font-bold group-hover:text-citoyen">
                         <a :href="post.link" x-text="post.name"></a>
                     </h2>
                     <div class="mt-2  line-clamp-3" x-html="post.excerpt" x-show="post.excerpt"></div>
