--- a/wp-content/themes/marchebe/templates/category/show.html.twig
+++ b/wp-content/themes/marchebe/templates/category/show.html.twig
@@ -1,4 +1,4 @@
-<div class="bg-slate-50 pt-16" x-data="
+<div class="bg-slate-50" x-data="
 {
   currentSite: {{ currentSite }},
   currentCategory: {{ category.term_id }},
